--- a/code/EDA.Rmd
+++ b/code/EDA.Rmd
@@ -50,7 +50,8 @@ Required_Packages=c("readxl",
 "ResourceSelection",
 "dummies",
 "e1071",
-"here"
+"here",
+"graphics"
 );
 
 # Call the Function
@@ -81,7 +82,6 @@ The Global Longitudinal Study of Osteoporosis in Women (GLOW) (2005-2014) was a 
 <br>What we know/don't know about the sample (500): 
 1. We do not know if the subjects are distributed equally around the world. We will assume that the same percentage from each region was selected for the sample in this dataset.
 2. Based on the Sub_ID(Subject ID), we can assume that the datat is independent sample of participants.
-3. 
 </p>
 ```{r}
 glow_data_file <- here("data", "glow500.csv")
@@ -110,21 +110,24 @@ dataset$SMOKE <- factor(dataset$SMOKE,labels=c("0","1"))
 dataset$RATERISK <- factor(dataset$RATERISK,labels=c("1","2","3"))
 dataset$FRACTURE <- factor(dataset$FRACTURE,labels=c("0","1"))
 
+#rearrange columns
+dataset <- dataset[c("SUB_ID","SITE_ID","PHY_ID","AGE","BMI","HEIGHT","WEIGHT","PRIORFRAC","PREMENO","MOMFRAC","ARMASSIST","SMOKE","RATERISK","FRACTURE")]
+
 str(dataset)
 ```
 #  Exploratory Data Analysis
 <br>
 ## Grouping Variables as Continuous, Categorical, and ID
 <br>
-```{r}
-numericVar <- dataset[,5:8]
+```{r group_var}
+numericVar <- dataset[,4:7]
 ID_var <- dataset[,c(1:3)]
 set_noID <- dataset[4:14]
-categoricalVar <- set_noID[,-c(2:5)]
+categoricalVar <- dataset[8:14]
 ```
 ##Create Train and Validation Datasets
 <br>
-```{r}
+```{r train_test}
 validation_index = createDataPartition(dataset$FRACTURE, p=0.70, list=FALSE)
 validationData = dataset[-validation_index,c(4:14)]
 trainingData = dataset[validation_index,c(4:14)]
@@ -136,12 +139,22 @@ Linearity -
 Independence of errors - Based on SUB_ID(Subject ID) we confirm each record is an independent sample.
 Multicollinearity - Weight and BMI are highly correlated but we will remove one from the 
 <br>
-```{r}
+```{r summary_stats}
 #Summary stats by groups for continous predictors
 t(aggregate(AGE~FRACTURE,data=dataset,summary))
 t(aggregate(BMI~FRACTURE,data=dataset,summary))
 t(aggregate(WEIGHT~FRACTURE,data=dataset,summary))
 t(aggregate(HEIGHT~FRACTURE,data=dataset,summary))
+
+```
+```{r summary_stats_boxplot}
+#par(mfrow=c(2,2)) # put four figures in a row (2*4)
+for (i in 4:7) {
+  boxplot(dataset[,i] ~ dataset$FRACTURE,ylab=names(dataset)[i],xlab="FRACTURE", main="Summary for Continuous Variables ")
+}
+```
+```{r}
+
 
 #create an nicer summary table
 index<-which(sapply(dataset,is.numeric))
@@ -167,21 +180,14 @@ std=sapply(set_noID,sd)
 print('The standard deviations are:')
 print(std)
 ```
-### Skewness
-The further the distribution of the skew value from zero, 
-the larger the skew to the left (negative skew value) or right (positive skew value). The skewness results of the continous variables show that Age, Weight, Height and BMI are positivly skewed.
-```{r}
-skew=apply(numericVar, 2, skewness) 
-print(skew)
-plot(skew)
-```
+
 ###Correlations
 <p>BMI and Weight show to be highly correlation which makes sense since weight is a factor in calculation of BMI. We will remove Weight from models in order to meet assumptions.</p>
 <br>
 ```{r}
 #Training dataset without ID columns
 corrplot(cor(trainingData[2:5]), method = "number", type = "upper", order = "hclust", 
-         tl.col = "black", tl.srt = 45, main="Correlation - Training Dataset")
+         tl.col = "black", tl.srt = 45)
 ```
 ### Visualization of Continuous Variables
 For the categorical variables, we show an unbalanced dataset of subjects with majority false PRIORFRAC, PREMENO, MOMFRAC, ARMASSIST, and SMOKE. There was a good balance of subjects in the 3 levels of RATERISK. An unblanced dataset will cause a model to favor the skewed numbers.
@@ -210,7 +216,8 @@ for(i in 1:4) {
 }
 
 #Barplots, which is used to count the accurances for categorical attributes 
-dataset_categorical = set_noID[,-c(2:5)]
+dataset_categorical = set_noID[,-c(2:5,11)]
+
 par(mfrow=c(3,2))
 for(i in 1:6) {
   counts <- table(dataset_categorical[,i]) # get the count for each categorical value
@@ -316,34 +323,22 @@ summary(model)
 
 h1 <- hoslem.test(model$y, fitted(model), g = 10) #number of groups to divide dataset into is 10
 h1
+
+
 ```
 <p>Interpretation of logistic regression model:
 Weight, height, BMI, Premeno, Armassist, and Smoke are not statistically significant variables. Priorfrac and Age are statistically significant variables and have the lowest p-value indicating a strong association with having a Fracture.
 <br>
+
+```{r eval=FALSE, include=FALSE}
+
 ###PCA and Scree Plot
-```{r}
 new_my_data <- lapply(trainingData, function(x) {
   if(is.factor(x)) as.numeric(as.character(x)) else x
 })
 new_my_data <- data.frame(new_my_data)
 str(new_my_data)
 
-
-#Get Training Set
-dat.train <- new_my_data
-
-dat.train.x <- dat.train[,1:ncol(dat.train)]
-dat.train.y <- dat.train$FRACTURE
-
-dat.train.y <- as.factor(as.character(dat.train.y))
-
-#PCA
-pc.result<-prcomp(dat.train.x,scale=TRUE)
-pc.scores<-pc.result$x
-pc.scores<-data.frame(pc.scores)
-pc.scores$FRACTURE <- dat.train.y
-
-#or
 #principal component analysis
 prin_comp <- prcomp(new_my_data, scale. = T)
 names(prin_comp)
@@ -391,10 +386,10 @@ prop_varex[1:11]
 #The answer to this question is provided by a scree plot. A scree plot is used to access components or factors which explains the most of variability in the data. It represents values in descending order.
 
 #scree plot
-plot(prop_varex, xlab = "Principal Component",
-             ylab = "Proportion of Variance Explained",
-             type = "b")
-
+#plot(prop_varex, xlab = "Principal Component",
+  #           ylab = "Proportion of Variance Explained",
+  #           type = "b")
+#
 #The plot above shows that ~ all 11 components explains around 99% variance in the data set. In order words, using PCA did not help explaine variance. This is the power of PCA
 
 #cumulative scree plot
@@ -430,9 +425,11 @@ cvfit <- cv.glmnet(dat.train.x, dat.train.y, family = "binomial", type.measure =
 plot(cvfit)
 coef(cvfit, s = "lambda.min")
 ```
+
+```{r eval=FALSE, include=FALSE}
 ##Creating a balanced dataset by Oversampling and check accuracy.
-<p>Below we created a balanced dataset using ROSE package. The idea is that by creating an over sampled dataset with randomly duplicated records, we prodcued a more balanced dataset of subjects.
-```{r}
+#<p>Below we created a balanced dataset using ROSE package. The idea is that by creating an over sampled dataset with randomly duplicated records, we prodcued a more balanced dataset of subjects.
+
 #Look at the proporation of subjecs with Fractures from the Full dataset.
 table(set_noID$FRACTURE)
 prop.table(table(set_noID$FRACTURE))
