--- a/code/ModelComparison.Rmd
+++ b/code/ModelComparison.Rmd
@@ -3,10 +3,10 @@ title: "Model Comparison"
 author: "Rajat Chandna"
 date: "August 17, 2018"
 output:
+  pdf_document:
+    toc: yes
   html_document:
     keep_md: yes
-    toc: yes
-  pdf_document:
     toc: yes
 ---
 <style type="text/css">
@@ -23,12 +23,12 @@ pre {
 /* code.r will control the font size for R code echoed from the code chunk, while pre will apply to any R results output from the code. */
 </style>
 
-```{r setup, include=FALSE}
+```{r setup_modelcomp, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r setup1, message=FALSE, include=FALSE} 
+```{r setup_modelcomp1, message=FALSE, include=FALSE} 
 # Function to Install and Load R Packages 
 Install_And_Load <- function(Required_Packages)
 {
@@ -79,8 +79,7 @@ Install_And_Load(Required_Packages);
 ```
 
 ```{r read_data, echo=FALSE}
-glow_data_file <- here("data", "glow500.csv")
-dataset_loc <- 
+glow_data_file <- here::here("data", "glow500.csv")
 dataset <- read.csv(glow_data_file, sep=",", stringsAsFactors = TRUE, header=TRUE,na.strings=c(""))
 
 # List rows of data that have missing values 
