--- a/code/ModelComparison.Rmd
+++ b/code/ModelComparison.Rmd
@@ -118,6 +118,21 @@ trainingData = dataset[validation_index,c(4:14)]
 table(dataset$FRACTURE)
 table(trainingData$FRACTURE)
 table(validationData$FRACTURE)
+
+#BarPlots of Fracture counts between full, training and validation datasets.
+par(mfrow=c(1,3))
+#par(mar=c(5,8,4,2)) # increase y-axis margin.
+count_full <- table(dataset$FRACTURE)
+count_trn <- table(trainingData$FRACTURE)
+count_test <- table(validationData$FRACTURE)
+
+
+barplot(counts,main="Full Dataset", ylab="Count", col=c("orange","blue"),names.arg=c("0 No Fracture", "1 Fracture"), cex.names=0.8)
+
+barplot(count_trn,main="Training Dataset", ylab="Count", col=c("orange","blue"),names.arg=c("0 No Fracture", "1 Fracture"), cex.names=0.8)
+
+barplot(count_test,main="Validation Dataset", ylab="Count", col=c("orange","blue"),names.arg=c("0 No Fracture", "1 Fracture"), cex.names=0.8)
+
 ```
 
 ```{r logisticRegressionAssumptionsCheck}
